fix menu z-index

--- a/src/assets/sass/common.scss
+++ b/src/assets/sass/common.scss
@@ -154,7 +154,7 @@ ul, ol {
 #menu-item{
 	width: 100%;
 	position: fixed;
-	z-index: 1000;
+	z-index: 9999;
 	transition: all 0.3s ease-in-out;
 }
 .menu-item{
